--- a/src/widescreen.scss
+++ b/src/widescreen.scss
@@ -1,48 +1,73 @@
-html {
-  box-sizing: border-box;
+@use "sass:map";
+@import "colors";
+
+$theme-color: $dark-theme;
+
+* {
+  font-family: Verdana, "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+  margin: 0;
+  padding: 0;
+  color: map.get($theme-color, "c3");
 }
 
-*, *::before, *::after {
-  box-sizing: inherit;
-  font-family: Verdana, "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+html {
+  height: 100%;
+}
+
+body {
+  background-color: map.get($theme-color, "c1");
+}
+
+header {
+  border-bottom: 1px solid map.get($theme-color, "c3");
+}
+
+.try {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .board {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-gap: 10px;
-  //  padding: 5px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  //  width: calc(90vh * 5 / 8 + 60px);
-  //  background-color: #f2f2f2;
-  //  padding-bottom: 5px;
+  grid-gap: 8px;
+  margin: 10px;
 }
 
 .tile {
-  border: 1px solid black;
+  border: 1px solid map.get($theme-color, "c2");
   width: 50px;
   height: 50px;
-
 }
 
-.calculator {
-  border: 1px solid #ccc;
-  border-radius: 15px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: calc(90vh * 5 / 8 + 60px);
-  background-color: #f2f2f2;
-  padding-bottom: 5px;
-}
-
-.calculator-keys {
+.keyboard {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-gap: 10px;
-  padding: 5px;
+  grid-template-rows: repeat(3, 1fr);
+}
+
+.keyboard-row {
+  display: flex;
+  justify-content: center;
+}
+
+.key {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #555555;
+  border: none;
+  border-radius: 5px;
+  width: 30px;
+  height: 45px;
+  margin: 3px;
+}
+
+.bigger-key {
+  width: 50px;
+
+  img {
+    width: 20px;
+    filter: invert(map.get($theme-color,"n1"));
+  }
 }
