--- a/src/widescreen.scss
+++ b/src/widescreen.scss
@@ -2,16 +2,26 @@
 @import "colors";
 
 $theme-color: $dark-theme;
+$header-height: 40px;
+
+@media only screen and (max-width: 600px) {
+  body {
+    width: 100%;
+    position: absolute;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  body {
+    position: relative;
+  }
+}
 
 * {
-  font-family: Verdana, "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
   margin: 0;
   padding: 0;
   color: map.get($theme-color, "c3");
-}
-
-html {
-  height: 100%;
+  text-align: center;
 }
 
 body {
@@ -19,55 +29,108 @@ body {
 }
 
 header {
-  border-bottom: 1px solid map.get($theme-color, "c3");
+  height: $header-height;
+  border-bottom: thin solid map.get($theme-color, "c3");
 }
 
-.try {
+.container {
+  max-width: 500px;
+  height: calc(99.9vh - $header-height);
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: space-between;
+}
+
+.board-container {
+  display: flex;
+  justify-content: center;
+  flex-grow: 1;
+  overflow: hidden;
 }
 
 .board {
+  height: 55vh;
+  width: calc(55vh - 50px);
+  display: grid;
+  grid-template-rows: repeat(6, 1fr);
+  grid-gap: 5px;
+  margin: 10px;
+  box-sizing: border-box;
+}
+
+.row-border {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-gap: 8px;
-  margin: 10px;
+  grid-gap: 5px;
 }
 
 .tile {
+  display: flex;
+  height: calc((55vh - 65px) / 5);
   border: 1px solid map.get($theme-color, "c2");
-  width: 50px;
-  height: 50px;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  line-height: 1;
+  font-weight: bold;
+  vertical-align: middle;
+  box-sizing: border-box;
 }
 
 .keyboard {
-  display: grid;
-  grid-template-rows: repeat(3, 1fr);
+  height: 200px;
+  margin: auto 8px;
 }
 
 .keyboard-row {
   display: flex;
-  justify-content: center;
+  width: 100%;
+  margin: 0 auto 5px;
 }
 
 .key {
+  background-color: map.get($theme-color, "c2");
+  box-shadow: 0 3px map.get($theme-color, "c4");
+
+  font-weight: bold;
+  border: 0;
+  padding: 0;
+  margin: 0 6px 0 0;
+  height: 58px;
+  border-radius: 4px;
+  cursor: pointer;
+  flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #555555;
-  border: none;
-  border-radius: 5px;
-  width: 30px;
-  height: 45px;
-  margin: 3px;
+
+  &:hover {
+    background-color: map.get($theme-color, "c5");
+    cursor: pointer;
+  }
+
+  &:active {
+    box-shadow: none;
+    transform: translateY(5px);
+  }
+}
+
+.key-board-down {
+  box-shadow: none;
+  transform: translateY(3px);
+  background-color: map.get($theme-color, "c5");
 }
 
 .bigger-key {
-  width: 50px;
+  flex: 1.5;
 
   img {
     width: 20px;
-    filter: invert(map.get($theme-color,"n1"));
+    filter: invert(map.get($theme-color, "n1"));
   }
+}
+
+.white-space {
+  flex: 0.5;
 }
